--- a/MSVC/Mains/conv.vcproj
+++ b/MSVC/Mains/conv.vcproj
@@ -62,8 +62,8 @@
 			<Tool
 				Name="VCLinkerTool"
 				OutputFile="C:\Build\win32\debug\bin\conv.exe"
-				AdditionalDependencies=" atk-1.0.lib glib-2.0.lib gthread-2.0.lib gobject-2.0.lib gmodule-2.0.lib gtk-win32-2.0.lib gdk-win32-2.0.lib gdk_pixbuf-2.0.lib pango-1.0.lib jpeg.lib png.lib z.lib tiff.lib libjasper.lib"
-				AdditionalLibraryDirectories="&quot;C:\Program Files\Microsoft Platform SDK for Windows Server 2003 R2\lib&quot;;&quot;C:\GTKWIN32\lib\&quot;;&quot;C:\GTKWIN32\lib\&quot;;&quot;C:\GTKWIN32\lib&quot;;&quot;C:\GTKWIN32\lib&quot;;&quot;C:\GTKWIN32\lib&quot;"
+				AdditionalDependencies=" atk-1.0.lib glib-2.0.lib gthread-2.0.lib gobject-2.0.lib gmodule-2.0.lib gtk-win32-2.0.lib gdk-win32-2.0.lib gdk_pixbuf-2.0.lib pango-1.0.lib jpeg.lib png.lib z.lib tiff.lib"
+				AdditionalLibraryDirectories="&quot;C:\Program Files\Microsoft Platform SDK for Windows Server 2003 R2\lib&quot;;&quot;C:\GTKWIN32\lib\&quot;;&quot;C:\GTKWIN32\lib\&quot;;&quot;C:\GTKWIN32\lib&quot;;&quot;C:\GTKWIN32\lib&quot;"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				IgnoreDefaultLibraryNames="msvcrt"
@@ -140,8 +140,8 @@
 			<Tool
 				Name="VCLinkerTool"
 				OutputFile="C:\Build\win32\opt\bin\conv.exe"
-				AdditionalDependencies=" atk-1.0.lib glib-2.0.lib gthread-2.0.lib gobject-2.0.lib gmodule-2.0.lib gtk-win32-2.0.lib gdk-win32-2.0.lib gdk_pixbuf-2.0.lib pango-1.0.lib jpeg.lib png.lib z.lib tiff.lib libjasper.lib"
-				AdditionalLibraryDirectories="&quot;C:\Program Files\Microsoft Platform SDK for Windows Server 2003 R2\lib&quot;;&quot;C:\GTKWIN32\lib\&quot;;&quot;C:\GTKWIN32\lib\&quot;;&quot;C:\GTKWIN32\lib&quot;;&quot;C:\GTKWIN32\lib&quot;;&quot;C:\GTKWIN32\lib&quot;"
+				AdditionalDependencies=" atk-1.0.lib glib-2.0.lib gthread-2.0.lib gobject-2.0.lib gmodule-2.0.lib gtk-win32-2.0.lib gdk-win32-2.0.lib gdk_pixbuf-2.0.lib pango-1.0.lib jpeg.lib png.lib z.lib tiff.lib"
+				AdditionalLibraryDirectories="&quot;C:\Program Files\Microsoft Platform SDK for Windows Server 2003 R2\lib&quot;;&quot;C:\GTKWIN32\lib\&quot;;&quot;C:\GTKWIN32\lib\&quot;;&quot;C:\GTKWIN32\lib&quot;;&quot;C:\GTKWIN32\lib&quot;"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="1"
@@ -212,10 +212,6 @@
 			</File>
 			<File
 				RelativePath="..\..\.\PatternRec\IO\RavlPatternRecIO.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\..\.\Audio\IO\RavlAudioSample.cc"
 				>
 			</File>
 
