--- a/MSVC/RavlCore.vcproj
+++ b/MSVC/RavlCore.vcproj
@@ -488,6 +488,10 @@
 				RelativePath="..\.\Core\System\TimeCode.cc"
 				>
 			</File>
+			<File
+				RelativePath="..\.\Core\System\STL.cc"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -1484,6 +1488,10 @@
 			</File>
 			<File
 				RelativePath="..\.\Core\System\TimeCode.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Core\System\STL.hh"
 				>
 			</File>
 		</Filter>
